--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "license": "CC-BY-4.0",
   "scripts": {
-    "lint": "eslint ./src/index.js",
-    "deploy": "git checkout gh-pages && git merge master && git push && git checkout master"
+    "lint": "eslint ./src/index.js"
   }
 }
