fix repository path

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Demo page for Banks DB",
   "author": "Linda Rian <lindarian12@gmail.com>",
-  "repository": "Ramoona/banks-db-demo",
+  "repository": "ramoona/banks-db-demo",
   "keywords": [
     "bankcard",
     "bin",
