--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
     "db"
   ],
   "dependencies": {
-    "banks-db": "^0.10.6",
-    "postcss-banks-db": "^0.7.0"
+    "banks-db": "^0.10.9",
+    "postcss-banks-db": "^0.9.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "eslint": "^3.2.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "gulp": "^3.9.0",
-    "gulp-postcss": "^6.1.1",
-    "browserify": "^13.1.0",
+    "autoprefixer": "^6.5.1",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^6.2.0",
+    "browserify": "^13.1.1",
     "postcss-nested": "^1.0.0",
     "postcss-normalize": "^0.3.0",
     "postcss-contrast": "^0.0.4",
     "vinyl-source-stream": "^1.1.0",
     "vanilla-masker": "^1.0.9",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^2.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.5.0"
   },
   "license": "CC-BY-4.0",
   "scripts": {
