--- a/package.json
+++ b/package.json
@@ -15,25 +15,22 @@
     "db"
   ],
   "dependencies": {
-    "banks-db": "^0.11.0",
-    "postcss-banks-db": "^0.9.0"
+    "banks-db": "^0.12.0",
+    "postcss-banks-db": "^0.10.0",
+    "vanilla-masker": "^1.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.1",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
+    "autoprefixer": "^7.1.2",
+    "browserify": "^14.4.0",
+    "eslint": "^4.2.0",
+    "eslint-config-airbnb": "^15.0.2",
     "gulp": "^3.9.1",
-    "gulp-postcss": "^6.2.0",
-    "browserify": "^13.1.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-normalize": "^0.3.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-uglify": "^3.0.0",
     "postcss-contrast": "^0.0.4",
-    "vinyl-source-stream": "^1.1.0",
-    "vanilla-masker": "^1.0.9",
-    "gulp-uglify": "^2.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.5.0"
+    "postcss-nested": "^2.0.4",
+    "postcss-normalize": "^4.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "license": "CC-BY-4.0",
   "scripts": {
