--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,9 @@
 {
   "extends": "airbnb/base",
   "rules": {
-    "no-console": 0,
-    "no-var": 0,
     "comma-dangle": [2, "never"],
-    "guard-for-in": 0
+    "no-param-reassign": 0,
+    "import/prefer-default-export": 0
   },
   "env": {
     "browser": true,
