--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-typescript": "^8.2.0",
-    "autoprefixer": "^7.1.2",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "autoprefixer": "^10.2.4",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "postcss": "^8.2.6",
-    "postcss-nested": "^2.0.4",
-    "postcss-normalize": "^4.0.0",
+    "postcss-nested": "^5.0.3",
+    "postcss-normalize": "^9.0.0",
     "rollup-plugin-postcss": "^4.0.0",
-    "typescript": "^4.1.5",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.5"
   },
   "license": "CC-BY-4.0"
 }
