--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
     "autoprefixer": "^10.2.4",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
